unpackaged/main/default/objects/Opportunity/fields/Created_Task_NCMi_First_Date__c.field-meta.xml
<CustomField>
    <fullName>Created_Task_NCMi_First_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created Task - NCMi First Date</label>
    <type>Checkbox</type>
</CustomField>