unpackaged/main/default/objects/Opportunity/fields/Current_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Current_Close_Date__c</fullName>
    <formula>CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Close Date</label>
    <type>Date</type>
</CustomField>