unpackaged/main/default/objects/Opportunity/fields/Current_Forecast_Category__c.field-meta.xml
<CustomField>
    <fullName>Current_Forecast_Category__c</fullName>
    <formula>TEXT( ForecastCategoryName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Forecast Category</label>
    <type>Text</type>
</CustomField>