unpackaged/main/default/objects/Opportunity/fields/Current_Probablity__c.field-meta.xml
<CustomField>
    <fullName>Current_Probablity__c</fullName>
    <formula>Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Probablity %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>