unpackaged/main/default/objects/Opportunity/fields/Current_Stage__c.field-meta.xml
<CustomField>
    <fullName>Current_Stage__c</fullName>
    <formula>TEXT( StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Stage</label>
    <type>Text</type>
</CustomField>