unpackaged/main/default/objects/Opportunity/fields/Curriculum__c.field-meta.xml
<CustomField>
    <fullName>Curriculum__c</fullName>
    <label>Curriculum Requested</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BHPH</fullName>
            </value>
            <value>
                <fullName>Virtual Training</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>