unpackaged/main/default/objects/Opportunity/fields/Data_Prof_Comp__c.field-meta.xml
<CustomField>
    <fullName>Data_Prof_Comp__c</fullName>
    <label>Data Prof Comp (Code)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Binary</valueSetName>
    </valueSet>
</CustomField>