unpackaged/main/default/objects/Opportunity/fields/Days_between_Create_and_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_between_Create_and_Close__c</fullName>
    <formula>CloseDate - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Days between Create and Close</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>