unpackaged/main/default/objects/Opportunity/fields/Days_since_last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Days_since_last_Activity__c</fullName>
    <formula>TODAY()  -  LastActivityDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days since last Activity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>