unpackaged/main/default/objects/Opportunity/fields/Dealer_Name__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Name__c</fullName>
    <label>Dealer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>