unpackaged/main/default/objects/Opportunity/fields/Demo_Contact__c.field-meta.xml
<CustomField>
    <fullName>Demo_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Demo Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Demo Contact)</relationshipLabel>
    <relationshipName>Demo_Contact_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>