unpackaged/main/default/objects/Opportunity/fields/Demos_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Demos_Cancelled__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Demos Cancelled</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>