unpackaged/main/default/objects/Opportunity/fields/Demos_Completed__c.field-meta.xml
<CustomField>
    <fullName>Demos_Completed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Demos Completed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>