unpackaged/main/default/objects/Opportunity/fields/Demos_Missed__c.field-meta.xml
<CustomField>
    <fullName>Demos_Missed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Demos Missed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>