unpackaged/main/default/objects/Opportunity/fields/Disconnect_Reason_Detail__c.field-meta.xml
<CustomField>
    <fullName>Disconnect_Reason_Detail__c</fullName>
    <label>Disconnect Reason Detail</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Disconnected_Reason__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Changed Consultant</fullName>
            </value>
            <value>
                <fullName>Changed NCM Product</fullName>
            </value>
            <value>
                <fullName>Contact - No response</fullName>
            </value>
            <value>
                <fullName>Contact - Cannot Reach Decision Maker</fullName>
            </value>
            <value>
                <fullName>Contact - Already NCM Customer</fullName>
            </value>
            <value>
                <fullName>Not Interested - Value</fullName>
            </value>
            <value>
                <fullName>Not Interested - Price</fullName>
            </value>
            <value>
                <fullName>Not Interested - Timing</fullName>
            </value>
            <value>
                <fullName>Not Interested - Losing Dealership</fullName>
            </value>
            <value>
                <fullName>Not Interested - Business is up</fullName>
            </value>
            <value>
                <fullName>Not Interested - Business is down</fullName>
            </value>
            <value>
                <fullName>Not Interested - With Competitor</fullName>
            </value>
            <value>
                <fullName>Not Interested - Doesn&#39;t Want Outside Help</fullName>
            </value>
            <value>
                <fullName>Constraint - Budget</fullName>
            </value>
            <value>
                <fullName>Constraint - Time</fullName>
            </value>
            <value>
                <fullName>Group - Merged</fullName>
            </value>
            <value>
                <fullName>Group - Dissolved</fullName>
            </value>
            <value>
                <fullName>Group - Manufacturer Canceled</fullName>
            </value>
            <value>
                <fullName>Group - Changed Groups</fullName>
            </value>
            <value>
                <fullName>Incompatible with Group - Consultant/Moderator</fullName>
            </value>
            <value>
                <fullName>Incompatible with Group - Group Member</fullName>
            </value>
            <value>
                <fullName>Incompatible with Group - Member Dynamic</fullName>
            </value>
            <value>
                <fullName>Incompatible with Group - Meeting Format</fullName>
            </value>
            <value>
                <fullName>Incompatible with Group - Market Conflict</fullName>
            </value>
            <value>
                <fullName>Incompatible - Not Meeting Needs</fullName>
            </value>
            <value>
                <fullName>Incompatible - Involuntary Move</fullName>
            </value>
            <value>
                <fullName>Incompatible - Involuntarily Terminated by Group</fullName>
            </value>
            <value>
                <fullName>Lost - Job</fullName>
            </value>
            <value>
                <fullName>Lost - Franchise</fullName>
            </value>
            <value>
                <fullName>Lost - Dealership</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>