unpackaged/main/default/objects/Opportunity/fields/Disconnected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Disconnected_Reason__c</fullName>
    <label>Disconnected Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost Customer</fullName>
            </value>
            <value>
                <fullName>Lost Prospect</fullName>
            </value>
            <value>
                <fullName>Not Interested</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>