unpackaged/main/default/objects/Opportunity/fields/DMS_Deprecated__c.field-meta.xml
<CustomField>
    <fullName>DMS_Deprecated__c</fullName>
    <label>DMS Deprecated</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ADP/CDK</fullName>
            </value>
            <value>
                <fullName>R&amp;R</fullName>
            </value>
            <value>
                <fullName>Arkona/DealerTrack</fullName>
            </value>
            <value>
                <fullName>UCS</fullName>
            </value>
            <value>
                <fullName>DealerBuilt</fullName>
            </value>
            <value>
                <fullName>AutoSoft</fullName>
            </value>
            <value>
                <fullName>AutoMate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>ACS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>