unpackaged/main/default/objects/Opportunity/fields/DocuSign_Files__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Files__c</fullName>
    <label>DocuSign Files (Code)</label>
    <type>Url</type>
</CustomField>