unpackaged/main/default/objects/Opportunity/fields/DocuSign_Info_Corrected__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Info_Corrected__c</fullName>
    <label>DocuSign Info Corrected</label>
    <type>Date</type>
</CustomField>