unpackaged/main/default/objects/Opportunity/fields/DocuSign_Info_Inaccurate__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Info_Inaccurate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DocuSign Info Inaccurate</label>
    <type>Checkbox</type>
</CustomField>