unpackaged/main/default/objects/Opportunity/fields/DocuSign_Info_Inaccurate_Code__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Info_Inaccurate_Code__c</fullName>
    <formula>DocuSign_Info_Inaccurate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DocuSign Info Inaccurate (Code)</label>
    <type>Checkbox</type>
</CustomField>