unpackaged/main/default/objects/Opportunity/fields/DocuSign_Sent__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Sent__c</fullName>
    <label>DocuSign Sent</label>
    <type>DateTime</type>
</CustomField>