unpackaged/main/default/objects/Opportunity/fields/DocuSign_Signed__c.field-meta.xml
<CustomField>
    <fullName>DocuSign_Signed__c</fullName>
    <label>DocuSign Signed</label>
    <type>DateTime</type>
</CustomField>