unpackaged/main/default/objects/Opportunity/fields/Employee_Referral_Name__c.field-meta.xml
<CustomField>
    <fullName>Employee_Referral_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Employee Referral Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>