unpackaged/main/default/objects/Opportunity/fields/Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Date__c</fullName>
    <label>Engagement Date</label>
    <type>Date</type>
</CustomField>