unpackaged/main/default/objects/Opportunity/fields/Engagements_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Engagements_Checklist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Engagements Checklist</label>
    <referenceTo>Engagements_Checklist__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>