unpackaged/main/default/objects/Opportunity/fields/Enrollment_Form_Billing_Amt__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Form_Billing_Amt__c</fullName>
    <description>This is the billing dollar amount that has been put on the enrollment form.</description>
    <inlineHelpText>This is the billing dollar amount that has been put on the enrollment form.</inlineHelpText>
    <label>Enrollment Form Billing Amt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>