unpackaged/main/default/objects/Opportunity/fields/Enrollment_Recd__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Recd__c</fullName>
    <description>Date the enrollment from has been received back from client. Notify NCMi enrollment form has been received.</description>
    <inlineHelpText>Date the enrollment from has been received back from client. Notify NCMi enrollment form has been received.</inlineHelpText>
    <label>Enrollment Recd</label>
    <type>Date</type>
</CustomField>