unpackaged/main/default/objects/Opportunity/fields/Enrollment_Sent__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Sent__c</fullName>
    <description>Send enrollment form to client once moderator has notified us that client is interested in the Select 100 program.  Cc NCMI and moderator that enrollment has been sent.</description>
    <inlineHelpText>Send enrollment form to client once moderator has notified us that client is interested in the Select 100 program.  Cc NCMI and moderator that enrollment has been sent.</inlineHelpText>
    <label>Enrollment Sent</label>
    <type>Date</type>
</CustomField>