unpackaged/main/default/objects/Opportunity/fields/Evaluator__c.field-meta.xml
<CustomField>
    <fullName>Evaluator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Digital Professional Services (Kain) consulting evaluator.</description>
    <inlineHelpText>Digital Professional Services (Kain) consulting evaluator.</inlineHelpText>
    <label>Evaluator</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Evaluator must be a Contact with NCM Associates as a record type to prevent customer contacts from accidentally being used here.</errorMessage>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>NCM Associates</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Evaluator)</relationshipLabel>
    <relationshipName>OpportunitiesoIZd</relationshipName>
    <type>Lookup</type>
</CustomField>