unpackaged/main/default/objects/Opportunity/fields/Exec_Comm_Approved__c.field-meta.xml
<CustomField>
    <fullName>Exec_Comm_Approved__c</fullName>
    <label>Exec Comm Approved</label>
    <type>Date</type>
</CustomField>