unpackaged/main/default/objects/Opportunity/fields/Executive_Committee_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Executive_Committee_Approved_Date__c</fullName>
    <description>This date is driven from a workflow based on when the opportunity stage was changed to Executive Committee Approved.</description>
    <inlineHelpText>This date is driven from a workflow based on when the opportunity stage was changed to Executive Committee Approved.</inlineHelpText>
    <label>Executive Committee Approved Date</label>
    <type>Date</type>
</CustomField>