unpackaged/main/default/objects/Opportunity/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <description>Date the Select 100 program ends for this client.</description>
    <inlineHelpText>Date the Select 100 program ends for this client.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>