unpackaged/main/default/objects/Opportunity/fields/Fin_Stmt_Recd__c.field-meta.xml
<CustomField>
    <fullName>Fin_Stmt_Recd__c</fullName>
    <label>Fin Stmt Recd</label>
    <type>Date</type>
</CustomField>