unpackaged/main/default/objects/Opportunity/fields/Finance_Contact__c.field-meta.xml
<CustomField>
    <fullName>Finance_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities (Finance Contact)</relationshipLabel>
    <relationshipName>Opportunities3</relationshipName>
    <type>Lookup</type>
</CustomField>