unpackaged/main/default/objects/Opportunity/fields/Financial_Data_Notes__c.field-meta.xml
<CustomField>
    <fullName>Financial_Data_Notes__c</fullName>
    <label>Financial Data Notes</label>
    <type>TextArea</type>
</CustomField>