unpackaged/main/default/objects/Opportunity/fields/Financial_Data_Received__c.field-meta.xml
<CustomField>
    <fullName>Financial_Data_Received__c</fullName>
    <label>Financial Data Received</label>
    <type>Date</type>
</CustomField>