unpackaged/main/default/objects/Opportunity/fields/Financial_Statement_Received__c.field-meta.xml
<CustomField>
    <fullName>Financial_Statement_Received__c</fullName>
    <description>Date stamped when Financial Statement Received task has been marked complete</description>
    <label>Financial Statement Received</label>
    <type>Date</type>
</CustomField>