unpackaged/main/default/objects/Opportunity/fields/First_Month_of_Data__c.field-meta.xml
<CustomField>
    <fullName>First_Month_of_Data__c</fullName>
    <inlineHelpText>Please enter the first month of data in this format: &quot;Nov 2024&quot;</inlineHelpText>
    <label>First Month of Data</label>
    <length>8</length>
    <type>Text</type>
</CustomField>