unpackaged/main/default/objects/Opportunity/fields/First_PCM_Mtg__c.field-meta.xml
<CustomField>
    <fullName>First_PCM_Mtg__c</fullName>
    <description>Date of the first PCM meeting to be held with the consultant</description>
    <inlineHelpText>Date of the first PCM meeting to be held with the consultant</inlineHelpText>
    <label>First PCM Mtg</label>
    <type>Date</type>
</CustomField>