unpackaged/main/default/objects/Opportunity/fields/Franchise_s__c.field-meta.xml
<CustomField>
    <fullName>Franchise_s__c</fullName>
    <label>Franchise(s)</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Automotive_Franchises</valueSetName>
    </valueSet>
</CustomField>