unpackaged/main/default/objects/Opportunity/fields/Franchises_DEPRECATE__c.field-meta.xml
<CustomField>
    <fullName>Franchises_DEPRECATE__c</fullName>
    <label>Franchise(s) - Deprecate</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Automotive_Franchises</valueSetName>
    </valueSet>
</CustomField>