unpackaged/main/default/objects/Opportunity/fields/Fwd_to_Moderator__c.field-meta.xml
<CustomField>
    <fullName>Fwd_to_Moderator__c</fullName>
    <label>Fwd to Moderator</label>
    <type>Date</type>
</CustomField>