unpackaged/main/default/objects/Opportunity/fields/General_Manager_Email__c.field-meta.xml
<CustomField>
    <fullName>General_Manager_Email__c</fullName>
    <label>General Manager Email</label>
    <type>Email</type>
</CustomField>