unpackaged/main/default/objects/Opportunity/fields/General_Manager_Name__c.field-meta.xml
<CustomField>
    <fullName>General_Manager_Name__c</fullName>
    <label>General Manager Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>