unpackaged/main/default/objects/Opportunity/fields/Group_Id__c.field-meta.xml
<CustomField>
    <fullName>Group_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>20 Group Only - Do Not Use for Proprietary/Benchmark</inlineHelpText>
    <label>Group Id</label>
    <referenceTo>Twenty_Groups__c</referenceTo>
    <relationshipLabel>Opportunities (Group Id)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>