unpackaged/main/default/objects/Opportunity/fields/Group_Identified__c.field-meta.xml
<CustomField>
    <fullName>Group_Identified__c</fullName>
    <description>Date stamped when Group Identified task has been marked complete</description>
    <label>Group Identified</label>
    <type>Date</type>
</CustomField>