unpackaged/main/default/objects/Opportunity/fields/Group_Info_Sent__c.field-meta.xml
<CustomField>
    <fullName>Group_Info_Sent__c</fullName>
    <label>Group Info Sent</label>
    <type>Date</type>
</CustomField>