unpackaged/main/default/objects/Opportunity/fields/Group_Info_to_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Group_Info_to_Prospect__c</fullName>
    <label>Group Info to Prospect</label>
    <type>Date</type>
</CustomField>