unpackaged/main/default/objects/Opportunity/fields/Group_Mbr_Number__c.field-meta.xml
<CustomField>
    <fullName>Group_Mbr_Number__c</fullName>
    <label>Group-Mbr Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>