unpackaged/main/default/objects/Opportunity/fields/Group_Moderator__c.field-meta.xml
<CustomField>
    <fullName>Group_Moderator__c</fullName>
    <label>Group Moderator</label>
    <length>255</length>
    <type>Text</type>
</CustomField>