unpackaged/main/default/objects/Opportunity/fields/Healthcheck_Store__c.field-meta.xml
<CustomField>
    <fullName>Healthcheck_Store__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Healthcheck Store</label>
    <referenceTo>Healthcheck_Store__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>