unpackaged/main/default/objects/Opportunity/fields/Initials__c.field-meta.xml
<CustomField>
    <fullName>Initials__c</fullName>
    <description>Initials for the NCMi representative who asked the client about the bundle</description>
    <label>Initials</label>
    <length>3</length>
    <type>Text</type>
</CustomField>