unpackaged/main/default/objects/Opportunity/fields/Installation_Planned__c.field-meta.xml
<CustomField>
    <fullName>Installation_Planned__c</fullName>
    <label>Installation Planned</label>
    <type>Date</type>
</CustomField>