unpackaged/main/default/objects/Opportunity/fields/Instances_Created__c.field-meta.xml
<CustomField>
    <fullName>Instances_Created__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Instances Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>