unpackaged/main/default/objects/Opportunity/fields/Instances_Signed__c.field-meta.xml
<CustomField>
    <fullName>Instances_Signed__c</fullName>
    <label>Instances Signed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>