unpackaged/main/default/objects/Opportunity/fields/Invitation_Sent__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Sent__c</fullName>
    <label>Invitation Sent</label>
    <type>Date</type>
</CustomField>