unpackaged/main/default/objects/Opportunity/fields/Invoice_Receipt_Email__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Receipt_Email__c</fullName>
    <label>Invoice/Receipt Email</label>
    <type>Email</type>
</CustomField>