unpackaged/main/default/objects/Opportunity/fields/Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Invoiced__c</fullName>
    <description>Indicates if all the line items for this opportunity have been invoiced.</description>
    <formula>IF( Line_Item_Not_Invoiced__c = 0, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Indicates if all the line items for this opportunity have been invoiced.</inlineHelpText>
    <label>Invoiced</label>
    <type>Checkbox</type>
</CustomField>