unpackaged/main/default/objects/Opportunity/fields/Invoiced_OLD__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_OLD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoiced (old)</label>
    <type>Checkbox</type>
</CustomField>