unpackaged/main/default/objects/Opportunity/fields/Invoiced_To__c.field-meta.xml
<CustomField>
    <fullName>Invoiced_To__c</fullName>
    <label>Invoiced To</label>
    <length>100</length>
    <type>Text</type>
</CustomField>