unpackaged/main/default/objects/Opportunity/fields/Is_Parent_Opp__c.field-meta.xml
<CustomField>
    <fullName>Is_Parent_Opp__c</fullName>
    <description>Indicates this opportunity is a parent level record (has no parent itself).</description>
    <formula>OR(
  ISNULL(Parent_Opportunity__c),
  ISBLANK(Parent_Opportunity__c)
)</formula>
    <inlineHelpText>Indicates this opportunity is a parent level record (has no parent itself).</inlineHelpText>
    <label>Is Parent Opp</label>
    <type>Checkbox</type>
</CustomField>