unpackaged/main/default/objects/Opportunity/fields/Is_Second_Dealership__c.field-meta.xml
<CustomField>
    <fullName>Is_Second_Dealership__c</fullName>
    <description>THIS IS DEPRECATED AND NEEDS TO BE REMOVED</description>
    <label>Is Second Dealership? (DEL)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Binary</valueSetName>
    </valueSet>
</CustomField>