unpackaged/main/default/objects/Opportunity/fields/Last_Completed_Task_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Completed_Task_Date__c</fullName>
    <label>Last Completed Task Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>