unpackaged/main/default/objects/Opportunity/fields/Last_Day_of_Meeting__c.field-meta.xml
<CustomField>
    <fullName>Last_Day_of_Meeting__c</fullName>
    <label>Last Day of Meeting</label>
    <type>Date</type>
</CustomField>