unpackaged/main/default/objects/Opportunity/fields/Lead_Description__c.field-meta.xml
<CustomField>
    <fullName>Lead_Description__c</fullName>
    <label>Lead Description</label>
    <type>TextArea</type>
</CustomField>