unpackaged/main/default/objects/Opportunity/fields/Line_Item_Not_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Not_Invoiced__c</fullName>
    <label>Line Item Not Invoiced (Code)</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Invoiced__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>