unpackaged/main/default/objects/Opportunity/fields/Line_Items_Missing_Dims__c.field-meta.xml
<CustomField>
    <fullName>Line_Items_Missing_Dims__c</fullName>
    <label>Line Items Missing Dims</label>
    <summaryFilterItems>
        <field>OpportunityLineItem.Has_Dim_1_2__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Ready_to_Invoice__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>OpportunityLineItem.Invoiced__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>