unpackaged/main/default/objects/Opportunity/fields/Load_Switch__c.field-meta.xml
<CustomField>
    <fullName>Load_Switch__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used for kicking records to cause updates - only used by administrators to mark as a record data change.</description>
    <label>Load Switch (code)</label>
    <type>Checkbox</type>
</CustomField>