unpackaged/main/default/objects/Opportunity/fields/Manager_List_Recd__c.field-meta.xml
<CustomField>
    <fullName>Manager_List_Recd__c</fullName>
    <description>Manager list received and emailed to NCMi and consultant.</description>
    <inlineHelpText>Manager list received and emailed to NCMi and consultant.</inlineHelpText>
    <label>Manager List Recd</label>
    <type>Date</type>
</CustomField>