unpackaged/main/default/objects/Opportunity/fields/Meeting_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Meeting_End_Date__c</fullName>
    <label>Meeting End Date</label>
    <type>Date</type>
</CustomField>