unpackaged/main/default/objects/Opportunity/fields/Member_Number__c.field-meta.xml
<CustomField>
    <fullName>Member_Number__c</fullName>
    <description>20 Group Member Number</description>
    <label>Member Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>